[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "continuation-tree"
version = "0.1.0"
description = "Continuation tree generation with anchor scoring and flex-attention-compatible packing."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
continuation-tree-show-sample = "continuation_tree.visualize:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
